--- a/age.html
+++ b/age.html
@@ -14,7 +14,12 @@
       <img class="icon" src="images/age.png" />
     </header>
     <hr size="5" width="95%" color="#464646" />
-    <div class="stats"></div>
+    <div class="stats">
+        <div style="color: #51ee85">0-12: 94</div>
+        <div style="color: #e00f3c">13-18: 102</div>
+        <div style="color: #66d3fd">19-59: 810</div>
+        <div style="color: #fcba03">60+: 40</div>
+    </div>
     <div class="agegraph"></div>
   </body>
 </html>
