--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         />
       </a>
 
-      <a href="parch.html">
+      <a href="parch1.html">
         <img class="parch" src="images/parch.png" width="250" height="250" />
       </a>
 
-      <a href="embark.html">
+      <a href="embark1.html">
         <img class="embark" src="images/embark.png" width="250" height="250" />
       </a>
     </div>
